--- a/puput/locale/ca/LC_MESSAGES/django.po
+++ b/puput/locale/ca/LC_MESSAGES/django.po
@@ -3,220 +3,222 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: wagtail 0.11\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-09-12 21:33+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2015-09-23 16:33+0100\n"
+"Last-Translator: aaloy <aaloy@apsl.net>\n"
+"Language-Team: ca <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Poedit 1.5.4\n"
+"Language: ca\n"
 
 #: models.py:26 models.py:94
 msgid "Description"
-msgstr ""
+msgstr "Descripció"
 
 #: models.py:27
 msgid "The blog description that will appear under the title."
-msgstr ""
+msgstr "La descripció del blog que apareixerà sota el títol"
 
 #: models.py:28 models.py:155
 msgid "Header image"
-msgstr ""
+msgstr "Imatge de capçalera"
 
 #: models.py:31
 msgid "Display comments"
-msgstr ""
+msgstr "Mostrar comentaris"
 
 #: models.py:32
 msgid "Display categories"
-msgstr ""
+msgstr "Mostrar categories"
 
 #: models.py:33
 msgid "Display tags"
-msgstr ""
+msgstr "Mostrar tags"
 
 #: models.py:34
 msgid "Display popular entries"
-msgstr ""
+msgstr "Mostrar entrades populars"
 
 #: models.py:35
 msgid "Display last entries"
-msgstr ""
+msgstr "Mostrar les darreres entrades"
 
 #: models.py:36
 msgid "Display archive"
-msgstr ""
+msgstr "Mostrar arxiu"
 
 #: models.py:41
 msgid "Entries per page"
-msgstr ""
+msgstr "Entrades per plana"
 
 #: models.py:42
 msgid "Last entries limit"
-msgstr ""
+msgstr "Límit per les darreres entrades"
 
 #: models.py:43
 msgid "Popular entries limit"
-msgstr ""
+msgstr "Límit per les entrades populars"
 
 #: models.py:44
 msgid "Tags limit entry header"
-msgstr ""
+msgstr "Límit pel nombre de tags de la capçalera"
 
 #: models.py:57
 msgid "Widgets"
-msgstr ""
+msgstr "Andròmines"
 
 #: models.py:63
 msgid "Parameters"
-msgstr ""
+msgstr "Paràmetres"
 
 #: models.py:68
 msgid "Comments"
-msgstr ""
+msgstr "Comentaris"
 
 #: models.py:84
 msgid "Blog"
-msgstr ""
+msgstr "Blog"
 
 #: models.py:90
 msgid "Category name"
-msgstr ""
+msgstr "Nom de la categoria"
 
 #: models.py:93
 msgid "Parent category"
-msgstr ""
+msgstr "Categoria pare"
 
 #: models.py:100 models.py:127
 msgid "Category"
-msgstr ""
+msgstr "Categoria"
 
 #: models.py:101 models.py:177 templates/puput/base.html:70
 msgid "Categories"
-msgstr ""
+msgstr "Categories"
 
 #: models.py:116
 msgid "Parent category cannot be self."
-msgstr ""
+msgstr "La categoria pare no pot ser self"
 
 #: models.py:118
 msgid "Cannot have circular Parents."
-msgstr ""
+msgstr "No pots posar pares circulars"
 
 #: models.py:147 models.py:148 models.py:207
 msgid "Entry"
-msgstr ""
+msgstr "Entrada"
 
 #: models.py:152
 msgid "body"
-msgstr ""
+msgstr "cos"
 
 #: models.py:154
 msgid "Post date"
-msgstr ""
+msgstr "Data del post"
 
 #: models.py:158
 msgid "excerpt"
-msgstr ""
+msgstr "resum"
 
 #: models.py:159
 msgid ""
 "Entry excerpt to be displayed on entries list. If this field is not filled, "
 "a truncate version of body text will be used."
 msgstr ""
+"El resum de l'apunt es presentarà a la llista d'entrades. Si no omples "
+"aquest camp, s'utilitzarà una versió espaçada del text."
 
 #: models.py:174
 msgid "Content"
-msgstr ""
+msgstr "Contingut"
 
 #: models.py:178 templates/puput/related_entries.html:6
 msgid "Related Entries"
-msgstr ""
+msgstr "Entrades relacionades"
 
 #: models.py:179
 msgid "Metadata"
-msgstr ""
+msgstr "Metadades"
 
 #: models.py:208
 msgid "Entries"
-msgstr ""
+msgstr "Entrades"
 
 #: routes.py:21
 msgid "date"
-msgstr ""
+msgstr "data"
 
 #: routes.py:34
 msgid "tag"
-msgstr ""
+msgstr "tag"
 
 #: routes.py:41
 msgid "category"
-msgstr ""
+msgstr "categoria"
 
 #: routes.py:48
 msgid "author"
-msgstr ""
+msgstr "autor"
 
 #: routes.py:60
 msgid "search"
-msgstr ""
+msgstr "cercar"
 
 #: templates/endless/show_more.html:5
 msgid "more"
-msgstr ""
+msgstr "més"
 
 #: templates/puput/base.html:49
 msgid "Search"
-msgstr ""
+msgstr "Cercar"
 
 #: templates/puput/base.html:58
 msgid "Last Entries"
-msgstr ""
+msgstr "Darreres entrades"
 
 #: templates/puput/base.html:64
 msgid "Popular Entries"
-msgstr ""
+msgstr "Entrades populars"
 
 #: templates/puput/base.html:76
 msgid "Tags"
-msgstr ""
+msgstr "Tags"
 
 #: templates/puput/base.html:82
 msgid "Archive"
-msgstr ""
+msgstr "Arxiu"
 
 #: templates/puput/blog_page.html:6 templates/puput/blog_page.html.py:7
 #: templates/puput/blog_page.html:15
 msgid "Entries for"
-msgstr ""
+msgstr "Entrades per"
 
 #: templates/puput/blog_page.html:31
 msgid "Continue reading"
-msgstr ""
+msgstr "Continuar llegint"
 
 #: templates/puput/blog_page.html:35
 msgid "No results founds."
-msgstr ""
+msgstr "No s'han trobat resultats"
 
 #: templates/puput/tags/archives_list.html:22
 msgid "No entry archives yet"
-msgstr ""
+msgstr "Encara no hi ha res arxivat"
 
 #: templates/puput/tags/categories_list.html:9
 msgid "No categories yet"
-msgstr ""
+msgstr "Encara no hi ha categories"
 
 #: templates/puput/tags/entries_list.html:31
 msgid "No entries yet"
-msgstr ""
+msgstr "Encara no hi ha entrades"
 
 #: templates/puput/tags/tags_list.html:9
 msgid "No tags yet"
-msgstr ""
+msgstr "Encara no hi ha tags"
