--- a/puput/locale/ca/LC_MESSAGES/django.po
+++ b/puput/locale/ca/LC_MESSAGES/django.po
@@ -7,34 +7,126 @@ msgid ""
 msgstr ""
 "Project-Id-Version: wagtail 0.11\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-02-18 17:44+0100\n"
+"POT-Creation-Date: 2015-09-12 21:33+0200\n"
 "PO-Revision-Date: 2015-09-23 16:33+0100\n"
 "Last-Translator: aaloy <aaloy@apsl.net>\n"
 "Language-Team: ca <LL@li.org>\n"
-"Language: ca\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Poedit 1.5.4\n"
+"Language: ca\n"
 
-#: abstracts.py:16
-msgid "body"
-msgstr "cos"
+#: models.py:26 models.py:94
+msgid "Description"
+msgstr "Descripció"
 
-#: abstracts.py:18
-msgid "Post date"
-msgstr "Data del post"
+#: models.py:27
+msgid "The blog description that will appear under the title."
+msgstr "La descripció del blog que apareixerà sota el títol"
 
-#: abstracts.py:19 models.py:31
+#: models.py:28 models.py:155
 msgid "Header image"
 msgstr "Imatge de capçalera"
 
-#: abstracts.py:22
+#: models.py:31
+msgid "Display comments"
+msgstr "Mostrar comentaris"
+
+#: models.py:32
+msgid "Display categories"
+msgstr "Mostrar categories"
+
+#: models.py:33
+msgid "Display tags"
+msgstr "Mostrar tags"
+
+#: models.py:34
+msgid "Display popular entries"
+msgstr "Mostrar entrades populars"
+
+#: models.py:35
+msgid "Display last entries"
+msgstr "Mostrar les darreres entrades"
+
+#: models.py:36
+msgid "Display archive"
+msgstr "Mostrar arxiu"
+
+#: models.py:41
+msgid "Entries per page"
+msgstr "Entrades per plana"
+
+#: models.py:42
+msgid "Last entries limit"
+msgstr "Límit per les darreres entrades"
+
+#: models.py:43
+msgid "Popular entries limit"
+msgstr "Límit per les entrades populars"
+
+#: models.py:44
+msgid "Tags limit entry header"
+msgstr "Límit pel nombre de tags de la capçalera"
+
+#: models.py:57
+msgid "Widgets"
+msgstr "Andròmines"
+
+#: models.py:63
+msgid "Parameters"
+msgstr "Paràmetres"
+
+#: models.py:68
+msgid "Comments"
+msgstr "Comentaris"
+
+#: models.py:84
+msgid "Blog"
+msgstr "Blog"
+
+#: models.py:90
+msgid "Category name"
+msgstr "Nom de la categoria"
+
+#: models.py:93
+msgid "Parent category"
+msgstr "Categoria pare"
+
+#: models.py:100 models.py:127
+msgid "Category"
+msgstr "Categoria"
+
+#: models.py:101 models.py:177 templates/puput/base.html:70
+msgid "Categories"
+msgstr "Categories"
+
+#: models.py:116
+msgid "Parent category cannot be self."
+msgstr "La categoria pare no pot ser self"
+
+#: models.py:118
+msgid "Cannot have circular Parents."
+msgstr "No pots posar pares circulars"
+
+#: models.py:147 models.py:148 models.py:207
+msgid "Entry"
+msgstr "Entrada"
+
+#: models.py:152
+msgid "body"
+msgstr "cos"
+
+#: models.py:154
+msgid "Post date"
+msgstr "Data del post"
+
+#: models.py:158
 msgid "excerpt"
 msgstr "resum"
 
-#: abstracts.py:23
+#: models.py:159
 msgid ""
 "Entry excerpt to be displayed on entries list. If this field is not filled, "
 "a truncate version of body text will be used."
@@ -42,184 +134,80 @@ msgstr ""
 "El resum de l'apunt es presentarà a la llista d'entrades. Si no omples "
 "aquest camp, s'utilitzarà una versió espaçada del text."
 
-#: abstracts.py:33
+#: models.py:174
 msgid "Content"
 msgstr "Contingut"
 
-#: abstracts.py:36 models.py:134 templates/puput/base.html:71
-msgid "Categories"
-msgstr "Categories"
-
-#: abstracts.py:37 templates/puput/related_entries.html:6
+#: models.py:178 templates/puput/related_entries.html:6
 msgid "Related Entries"
 msgstr "Entrades relacionades"
 
-#: abstracts.py:39
+#: models.py:179
 msgid "Metadata"
 msgstr "Metadades"
 
-#: models.py:29 models.py:111
-msgid "Description"
-msgstr "Descripció"
-
-#: models.py:30
-msgid "The blog description that will appear under the title."
-msgstr "La descripció del blog que apareixerà sota el títol"
-
-#: models.py:34
-msgid "Display comments"
-msgstr "Mostrar comentaris"
-
-#: models.py:35
-msgid "Display categories"
-msgstr "Mostrar categories"
-
-#: models.py:36
-msgid "Display tags"
-msgstr "Mostrar tags"
-
-#: models.py:37
-msgid "Display popular entries"
-msgstr "Mostrar entrades populars"
-
-#: models.py:38
-msgid "Display last entries"
-msgstr "Mostrar les darreres entrades"
-
-#: models.py:39
-msgid "Display archive"
-msgstr "Mostrar arxiu"
-
-#: models.py:44
-msgid "Entries per page"
-msgstr "Entrades per plana"
-
-#: models.py:45
-msgid "Last entries limit"
-msgstr "Límit per les darreres entrades"
-
-#: models.py:46
-msgid "Popular entries limit"
-msgstr "Límit per les entrades populars"
-
-#: models.py:47
-msgid "Tags limit entry header"
-msgstr "Límit pel nombre de tags de la capçalera"
-
-#: models.py:49
-msgid "Use short description in feeds"
-msgstr ""
-
-#: models.py:64
-msgid "Widgets"
-msgstr "Andròmines"
-
-#: models.py:70
-msgid "Parameters"
-msgstr "Paràmetres"
-
-#: models.py:75
-msgid "Comments"
-msgstr "Comentaris"
-
-#: models.py:78
-msgid "Feeds"
-msgstr ""
-
-#: models.py:101
-msgid "Blog"
-msgstr "Blog"
-
-#: models.py:107
-msgid "Category name"
-msgstr "Nom de la categoria"
-
-#: models.py:110
-msgid "Parent category"
-msgstr "Categoria pare"
-
-#: models.py:122
-msgid "Parent category cannot be self."
-msgstr "La categoria pare no pot ser self"
-
-#: models.py:124
-msgid "Cannot have circular Parents."
-msgstr "No pots posar pares circulars"
-
-#: models.py:133 models.py:138
-msgid "Category"
-msgstr "Categoria"
-
-#: models.py:158 models.py:159 models.py:202
-msgid "Entry"
-msgstr "Entrada"
-
-#: models.py:203
+#: models.py:208
 msgid "Entries"
 msgstr "Entrades"
 
-#: routes.py:24
+#: routes.py:21
 msgid "date"
 msgstr "data"
 
-#: routes.py:37
+#: routes.py:34
 msgid "tag"
 msgstr "tag"
 
-#: routes.py:44
+#: routes.py:41
 msgid "category"
 msgstr "categoria"
 
-#: routes.py:51
+#: routes.py:48
 msgid "author"
 msgstr "autor"
 
-#: routes.py:64
+#: routes.py:60
 msgid "search"
 msgstr "cercar"
 
-#: templates/el_pagination/show_more.html:5
+#: templates/endless/show_more.html:5
 msgid "more"
 msgstr "més"
 
-#: templates/puput/base.html:45
-msgid "Feed RSS"
-msgstr ""
-
-#: templates/puput/base.html:50
+#: templates/puput/base.html:49
 msgid "Search"
 msgstr "Cercar"
 
-#: templates/puput/base.html:59
+#: templates/puput/base.html:58
 msgid "Last Entries"
 msgstr "Darreres entrades"
 
-#: templates/puput/base.html:65
+#: templates/puput/base.html:64
 msgid "Popular Entries"
 msgstr "Entrades populars"
 
-#: templates/puput/base.html:77
+#: templates/puput/base.html:76
 msgid "Tags"
 msgstr "Tags"
 
-#: templates/puput/base.html:83
+#: templates/puput/base.html:82
 msgid "Archive"
 msgstr "Arxiu"
 
-#: templates/puput/blog_page.html:6 templates/puput/blog_page.html:7
-#: templates/puput/blog_page.html:29
+#: templates/puput/blog_page.html:6 templates/puput/blog_page.html.py:7
+#: templates/puput/blog_page.html:15
 msgid "Entries for"
 msgstr "Entrades per"
 
-#: templates/puput/blog_page.html:48
+#: templates/puput/blog_page.html:31
 msgid "Continue reading"
 msgstr "Continuar llegint"
 
-#: templates/puput/blog_page.html:52
-msgid "No results found."
+#: templates/puput/blog_page.html:35
+msgid "No results founds."
 msgstr "No s'han trobat resultats"
 
-#: templates/puput/tags/archives_list.html:23
+#: templates/puput/tags/archives_list.html:22
 msgid "No entry archives yet"
 msgstr "Encara no hi ha res arxivat"
 
