--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,10 @@
 Changelog
 =========
 
+0.9.1 (2017-09-12)
+----------------
+* Add missing migration.
+
 0.9 (2017-08-03)
 ----------------
 * Fix issue that creates undesired migrations.
