--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,14 @@
 Changelog
 =========
 
+1.0 (2018-04-10)
+------------------
+* Add support for Django 2.0 and Wagtail 2.0. Drop Python 2.7 support.
+* Add code and block quote options to the entries text editor.
+* Improve default template visualisation.
+* Configurable default template color.
+* Add social sharing links.
+
 0.9.2 (2018-02-13)
 ------------------
 * Remove django-compressor dependency.
