--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,7 +3,9 @@ Changelog
 
 1.1.2 (unreleased)
 ------------------
-
+* Add Django 3.1 support. Drop Django <2.2 support.
+* Add Wagtail 2.10 support.
+* Add Python 3.9 to travis test matrix.
 * Fix circular imports.
 
 1.1.1 (2020-06-13)
