--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,8 +3,8 @@ Changelog
 
 1.1.2 (unreleased)
 ------------------
-* Add Django 3.1 support. Drop Django <2.2 support.
-* Add Wagtail 2.10 support.
+* Add Django 3.2 support. Drop Django <2.2 support.
+* Add Wagtail 2.10-2.14 support.
 * Add Python 3.9 to travis test matrix.
 * Fix circular imports.
 
